# qavex

./: .codespell-ignore-words  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SERVICE_TEMPLATE.md  docker-compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyproject.toml_
backend/template-app/: .env.example  Dockerfile  README.md  TODO.md  debug.Dockerfile  kubernetes_probes_example.txt  pyproject.toml
backend/template-app/src/: main.py
backend/template-app/src/template_app/: __init__.py  asgi.py  cli.py  grpc.py  http.py  http_.py  kafka.py  main.py  main_.py  run.py
backend/template-app/src/template_app/alembic/: env.py
backend/template-app/src/template_app/api/: __init__.py  router.py
backend/template-app/src/template_app/bootstrap/: application.py  container.py  infrastructure.py  module_context.py  modules.py  modules_definitions.py  protocols.py  registry.py
backend/template-app/src/template_app/config/: __init__.py  alembic.ini  app.py  celery.py  config.yaml  enums.py  logger.dev.yaml  logger.prod.toml  logger.prod.yaml  logger.yaml  logging.yaml  settings.py
backend/template-app/src/template_app/core/: __init__.py  config.py  database.py  dependencies.py  logging.py  types.py
backend/template-app/src/template_app/core_/: dependencies.py
backend/template-app/src/template_app/docs/: openapi.yaml
backend/template-app/src/template_app/launcher/: __init__.py  config.py  exceptions.py  facade.py  modes.py  run.py
backend/template-app/src/template_app/metrics/: __init__.py  prometheus.py
backend/template-app/src/template_app/models/: __init__.py  user_orm.py
backend/template-app/src/template_app/models_/: auth.py  sqlalchemy_base.py  user.py
backend/template-app/src/template_app/modules/: README.md  modules_definitions.py
backend/template-app/src/template_app/observability/: __init__.py  health.py  metrics.py  router.py
backend/template-app/src/template_app/runtime/: bootstrap.py
backend/template-app/src/template_app/services/: __init__.py  user_service.py
backend/template-app/src/template_app/transports/: __init__.py  manager.py
backend/template-app/src/tests/: README.md  TODO.md  conftest.py
backend/template-app/src/tests/contract/: README.md
backend/template-app/src/tests/contracts/: test_application_context_contract.py  test_dependency_provider_contract.py  test_fastapi_not_runtime_owner.py  test_http_transport_not_runtime_owner.py  test_immutable_application_context.py  test_infrastructure_provider_contract.py  test_kernel.py  test_kernel_app_contract.py  test_kernel_context.py  test_kernel_modules_are_manifests.py  test_kernel_modules_immutable.py  test_kernel_single_app_source_of_truth.py  test_kernel_tranport_isolation.py  test_kernel_transport_agnositc.py  test_launch_modes.py  test_launcher_modes.py  test_module_context.py  test_module_context_api.py  test_module_context_app_encapsulation.py  test_module_context_hides_runtime.py  test_module_context_restrictions.py  test_module_loading.py  test_module_protocol.py  test_module_router_registration.py  test_multi_transport_kernel.py  test_no_optional_fastapi.py  test_no_runtime_in_fastapi_state.py  test_provider_lifecycle_registration.py  test_provider_registration.py  test_provider_shutdown_registration.py  test_runtime_command_bus.py  test_runtime_state.py  test_transport_manager_contract.py  test_transport_runtime_boundary.py
backend/template-app/src/tests/e2e/: README.md
backend/template-app/src/tests/factories/: apis.py  capabilities.py  context.py  events.py  infra_api.py  infrastructure.py  kernel.py  kernel_context.py  messaging_api.py  module_context.py  modules.py  runtime.py  runtime_api.py  transport.py
backend/template-app/src/tests/fakes/: __init__.py  cache.py  command_bus.py  modules.py  providers.py  query_bus.py  transports.py
backend/template-app/src/tests/integration/: README.md  test_app_routes.py  test_bootstrp_kernel.py  test_infrastructure_bootstrap.py  test_infrastructure_lifecycle.py  test_kernel_bootstrap.py  test_kernel_lifecycle.py  test_lifecycle_execution.py  test_lifespan_integration.py  test_lifespan_kernel_bridge.py  test_module_routes_registered.py  test_module_setup_pipeline.py  test_provider_lifecycle.py  test_runtime_integration_bus.py  test_runtime_module_hooks.py  (+2 more)
backend/template-app/tests/: README.md  TODO.md  __init__.py  conftest.py  test_app.py  test_logging.py  test_ping.py
backend/template-app/tests/contracts/: test_application_context.py  test_application_context_contract.py  test_bootstrap.py  test_bootstrap_runtime.py  test_dependencies.py  test_dependency_provider_contract.py  test_kernel.py  test_kernel_context.py  test_lifecycle_registry.py  test_module_context.py  test_module_context_api.py  test_module_context_restrictions.py  test_module_loading.py  test_module_protocol.py  test_module_registry.py  test_no_runtime_in_fastapi_state.py  test_provider_lifecycle_registration.py  test_provider_registration.py  test_provider_shutdown_registration.py  test_routes.py  test_runtime_state.py
backend/template-app/tests/e2e/: test_auth_flow.py  test_full_flow.py
backend/template-app/tests/integration/: test_app_routes.py  test_app_startup.py  test_db.py  test_infrastructure_bootstrap.py  test_infrastructure_lifecycle.py  test_kernel_lifecycle.py  test_provider_lifecycle.py  test_runtime_module_hooks.py  test_startup.py
backend/template-app/tests/smoke/: test_main.py  test_main_ide_entrypoint.py  test_main_import.py  test_package_import.py
backend/template-app/tests/test_api/: test_endpoints.py  test_health.py  test_users.py
backend/template-app/tests/unit/: __init__.py  test_configs.py  test_import_app.py  test_main.py  test_module_protocol.py  test_utils.py
services/template-service/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml
services/template-service/src/template_service/: main.py
shared/py/db/: pyproject.toml
shared/py/logger/: pyproject.toml
(+897 files in other folders)
