[project]
name = "qavex"
version = "0.1.0"
description = "Monorepo workspace"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "pkg-meta" },
  { include-group = "test" },
  { include-group = "type" },
]
test = [
  "covdefaults>=2.3",
  "pytest>=8.4.2",
  "pytest-cov>=7",
  "pytest-mock>=3.15.1",
]
type = [
  "ty>=0.0.17",
  { include-group = "test" },
]
lint = [
  "pre-commit-uv>=4.2.1",
]
pkg-meta = [
  "check-wheel-contents>=0.6.3",
  "twine>=6.2",
  "uv>=0.11",
]

[tool.uv]
required-version = "==0.11.7"  # upgrade uv's version manually and keep in sync with: pre-commit, docker, ci, locally
workspace.members = [
  "backend/market-data",
  "backend/template-app",
]

[tool.ruff]
line-length = 79
format.preview = true  # Switch to Ruff's experimental features
format.indent-style = "space"
format.line-ending = "lf"  # PEP8: Unix-style end of line symbol
format.docstring-code-line-length = 78
format.docstring-code-format = true
format.quate-style = "double"
lint.select = [
  "ALL",
]
lint.ignore = [
  "ANN101", # no type annotation for self
  "ANN401", # allow Any as type annotation
  "COM812", # Conflict with formatter
  "CPY",    # No copyright statements
  "D203",   # 'one-blank-line-befor-class' and 'no-blank-line-before-class' (D211) are incompatible
  "D212",   # 'multi-line-summary-first-line' (D212) and 'multi-line-summary-second-line' (D213) are incompatible
  "DOC501", # not working with Sphinx
  "ISC001", # Conflict with formatter
  "RUF067", # '__init__' module should only contain docstrings and re-exports
  "S104",   # Possible binding to all interfaces
]
lint.per-file-ignores."tests/**/*.py" = [
  "D",       # don't care about documentation in tests
  "FBT",     # don't care about booleans as positional arguments in tests
  "INP001",  # no implicit namespace
  "PLC2701", # private import
  "PLR0913", # any number of arguments in tests
  "PLR0917", # any number of arguments in tests
  "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
  "S",       # 'subprocess' call: check for execution of untrusted input
  "S101",    # asserts allowed in tests...
]
lint.isort = { known-first-party = [], required-imports = [
  "from __future__ import annotations",
] }
lint.preview = true

[tool.codespell]
builtin = "clear,usage,en-GB_to_en-US"
count = true

[tool.ty]
environment.python-version = "3.11"

[tool.pytest]
ini_options.testpaths = [
  "tests",
]

[tool.coverage]
run.parallel = true
run.plugins = [
  "covdefaults",
]
paths.source = [
  "src",
  ".tox/*/.venv/lib/*/site-packages",
  ".tox\\*\\.venv\\lib\\site-packages",
  ".tox/*/lib/*/site-packages",
  ".tox\\*\\Lib\\site-packages",
  "**/src",
  "**\\src",
]
report.fail_under = 63
html.show_contexts = true
html.skip_covered = false
