[project]
name = "qavex"
version = "0.1.0"
description = "The monorepo's workspace configuration"
requires-python = ">=3.11"
classifiers = [
  "Private :: Do Not Upload",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "pkg-meta" },
  { include-group = "release" },
  { include-group = "test" },
  { include-group = "typing" },
]
test = [
  "covdefaults>=2.3",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.3",
  "pytest-cov>=7",
  "pytest-mock>=3.15.1",
]
lint = [
  "check-jsonschema>=0.37.2",
  "codespell>=2.4.2",
  "prek>=0.3.11",
  "pyproject-fmt>=2.21.1",
  "pyyaml>=6.0.3",
  "ruff>=0.15.12",
  "zizmor>=1.24.1",
]
pkg-meta = [
  "check-wheel-contents>=0.6.3",
  "twine>=6.2",
]
release = [
  "pygithub>=2",
  "towncrier>=23.11",
]
typing = [
  "mypy>=1.20.2",
  "pydantic>=2.13.1",
  "pydantic-settings>=2.14",
  "ty>=0.0.17",
]

[tool.uv]
required-version = "==0.11.16"  # upgrade uv's version manually and keep in sync with: pre-commit, docker, ci, locally
workspace.members = [
  "backend/template-app",
]

[tool.ruff]
line-length = 79
exclude = [ "**/_version.py", "**/build/", "**/dict/", "**/tests/", "shared/py/db", "shared/py/logger" ]
format.preview = true  # Switch to Ruff's experimental features
format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "lf"  # PEP8: Unix-style end of line symbol
format.docstring-code-line-length = 78
format.docstring-code-format = true
lint.select = [ "ALL" ]
lint.ignore = [
  "ANN401", # allow Any as type annotation
  "COM812", # Conflict with formatter
  "CPY",    # No copyright statements
  "D203",   # 'one-blank-line-befor-class' and 'no-blank-line-before-class' (D211) are incompatible
  "D212",   # 'multi-line-summary-first-line' (D212) and 'multi-line-summary-second-line' (D213) are incompatible
  "DOC501", # not working with Sphinx
  "ISC001", # Conflict with formatter
  "RUF067", # '__init__' module should only contain docstrings and re-exports
  "S104",   # Possible binding to all interfaces
]
lint.per-file-ignores."**/tests/**/*.py" = [
  "D",       # don't care about documentation in tests
  "FBT",     # don't care about booleans as positional arguments in tests
  "INP001",  # no implicit namespace
  "PLC2701", # private import
  "PLR0913", # any number of arguments in tests
  "PLR0917", # any number of arguments in tests
  "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
  "S",       # 'subprocess' call: check for execution of untrusted input
  "S101",    # asserts allowed in tests...
]
lint.isort = { known-first-party = [
  "template_app",
], required-imports = [
  "from __future__ import annotations",
] }
lint.preview = true

[tool.codespell]
builtin = "clear,usage,en-GB_to_en-US"
count = true

[tool.mypy]
mypy_path = [
  "backend/template-app/src",
]
exclude = [
  "(^|/)(tests|migrations|scripts)/",
  "backend/template-app_",
  "backend/alembic",
]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
explicit_package_bases = true
no_implicit_reexport = true
pretty = true
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
# follow_imports = "normal"
# show_column_numbers = true
# show_error_codes = true
# warn_no_return = false
plugins = [
  "pydantic.mypy",
]

[tool.ty]
environment.python-version = "3.11"

[tool.pytest]
ini_options.asyncio_mode = "auto"
ini_options.testpaths = [
  "backend/template-app/src/tests",
]
ini_options.python_files = [ "test_*.py" ]
ini_options.python_classes = [ "Test*" ]
ini_options.python_functions = [ "test_*" ]
ini_options.xfail_strict = true
ini_options.addopts = [ "-ra", "-q", "--ignore=backend/template-app_" ]
# ini_options.addopts = ["-ra", "--strict-config", "--strict-markers", "-p", "vcs_versioning.test_api"]
ini_options.markers = [
  "issue(id): reference to github issue",
  "skip_commit: allows to skip committing in the helpers",
]

[tool.coverage]
run.parallel = true
run.plugins = [
  "covdefaults",
]
paths.source = [
  "src",
  ".tox/*/.venv/lib/*/site-packages",
  ".tox\\*\\.venv\\lib\\site-packages",
  ".tox/*/lib/*/site-packages",
  ".tox\\*\\Lib\\site-packages",
  "**/src",
  "**\\src",
]
report.fail_under = 63
html.show_contexts = true
html.skip_covered = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
