[project]
name = "template-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "fastapi",
    "uvicorn",

    "template-package",
]

[project.scripts]
template-service = "template_service.main:main"

[tool.uv.sources]
template-package = { workspace = true}
