[project]
name = "template-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
  "fastapi == 0.135.*",
  "uvicorn == 0.44.*",

  # shared packages
  "template-package == 0.1.0",
]

[project.scripts]
template-service = "template_service.main:main"
