[project]
name = "db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "leontari", email = "262930388+leontari@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
