[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.11.3,<0.12" ]

[project]
name = "db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [ { name = "leontari", email = "262930388+leontari@users.noreply.github.com" } ]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = []
